# funlist

./: .dockerignore  .env.example  .gitignore  .replit  AI_ACCESS_LOG_AUDIT_REPORT.md  AI_GATEWAY_QA_CHECKLIST.md  AI_NATIVE_IMPLEMENTATION_PLAN.md  Dockerfile  FUNALYTICS_IMPLEMENTATION.md  FUNLIST_REPOS.md  Fun_Rating_System.md  GOOGLE_CLOUD_DEPLOYMENT.md  LICENSE  PROJECT_PLAN.md  Pasted--Technical-Report-for-AdConnect-ai-Development-Team-Project-Overview-AdConnect-a-1728749845298.txt  Pasted-Consumer-Pain-Point-Fragmented-Event-Discovery-Problem-Statement-Residents-and-visitors-in-Thurs-1728747378299.txt  Pasted-I-can-assist-with-all-the-elements-you-re-requesting-for-your-platform-s-registration-and-login-proc-1728749219954.txt  Pasted-TheFunMap-com-Business-Plan-Executive-Summary-TheFunMap-com-is-a-comprehensive-online-platform-des-1728747703563.txt  Procfile  README.md  README_OAUTH.md  STATUS_FUNALYTICS_ROLLOUT.md  TASKS.md  add_ecosystem_columns.py  add_network_opt_out_column.py  add_sample_events.py  admin_login.py  ai_instructions.md  app.py  app_config.py  approve_organizer.py  bulk_insert.sql  check_models.py  check_models_sync.py  cleanup_duplicates.py  cloudbuild.yaml  complete_schema_fix.py  config.py  create_admin.py  create_admin_user.py  (+83 more)
FUNALYTICS_DOCS/: FUNALYTICS_FAQ.md  FUNALYTICS_OVERVIEW.md  FUNALYTICS_TECH.md
api/: Dockerfile  README.md  cloudbuild.yaml  jest.config.js  package-lock.json  package.json  run.js  server.js
attached_assets/: Pasted--AI-Assistants-Portal-Styles-ai-portal-header-background-linear-gradient-135deg-var--1763736899019_1763736899020.txt  (+119 more)
utils/: auth.py  (+1 more)
(+188 files in other folders)
