[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.9",
    "flask-login",
    "flask-wtf>=1.2.1",
    "scikit-learn>=1.5.2",
    "numpy>=2.1.2",
    "flask-mail>=0.10.0",
    "itsdangerous>=2.2.0",
    "flask-session>=0.8.0",
    "sqlalchemy>=2.0.35",
    "werkzeug>=3.0.4",
    "wtforms>=3.1.2",
    "geopy>=2.4.1",
]
