[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.9",
    "flask-login",
    "flask-wtf>=1.2.1",
    "scikit-learn>=1.5.2",
    "numpy>=2.1.2",
    "flask-mail>=0.10.0",
    "itsdangerous>=2.2.0",
    "flask-session>=0.8.0",
    "sqlalchemy>=2.0.35",
    "werkzeug>=3.0.4",
    "wtforms>=3.1.2",
    "geopy>=2.4.1",
    "requests>=2.32.3",
    "flask-limiter>=3.10.1",
    "psutil>=7.0.0",
    "flask-migrate>=4.1.0",
    "slugify>=0.0.1",
    "python-dateutil>=2.9.0.post0",
    "cachelib>=0.13.0",
    "msgspec>=0.18.6",
    "urllib3>=2.2.2",
    "idna>=3.7",
    "certifi>=2024.7.4",
    "markupsafe>=2.1.5",
    "click>=8.1.7",
    "blinker>=1.8.2",
    "jinja2>=3.1.4",
    "typing-extensions>=4.12.2",
    "alembic>=1.14.1",
    "mako>=1.3.6",
    "six>=1.16.0",
]
